--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "zone.js": "~0.11.4",
     "@angular/cli": "~12.2.6",
     "@angular/compiler-cli": "~12.2.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.6",
@@ -41,8 +42,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "postcss": "^8.4.6",
-    "tailwindcss": "^2.2.19"
+    "postcss": "^8.4.6"
   },
   "engines": {
     "node": "16.13.1",
